@@ -28,6 +28,7 @@
     <Or>
       <Field name="MAX_ALLOWED_OUTPUT_FAILURES_FRACTION"/>
       <Field name="MAX_ALLOWED_OUTPUT_FAILURES"/>
+      <Field name="MAX_ALLOWED_TIME_FOR_TASK_READ_ERROR_SEC"/>
     </Or>
     <Bug pattern="ST_WRITE_TO_STATIC_FROM_INSTANCE_METHOD"/>
   </Match>
